--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,12 +1,4 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: 🚀 Full CI/CD Pipeline (Build, Test, Deploy)
 
 on:
   push:
@@ -15,21 +7,55 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  ci-cd-pipeline:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    # PHASE 1 - PRÉPARATION
+    - name: 🔍 Checkout Code
+      uses: actions/checkout@v4
+
+    # PHASE 2 - BUILD & TEST (CI)
+    - name: ☕ Setup Java 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        cache: maven # Optimisation du cache
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: 🛠️ Build & Test
+      run: mvn -B verify # Au lieu de package pour lancer les tests
+      env:
+        MAVEN_OPTS: -Dmaven.repo.local=.m2/repository # Cache local
+
+    # PHASE 3 - LIVRAISON (CD)
+    if: github.ref == 'refs/heads/main' # Ne déploie que sur main
+    needs: [ci-cd-pipeline] # Attendre la phase CI
+    
+    - name: 🐳 Build/Push Docker Image
+      env:
+        DOCKER_TAG: ${{ secrets.DOCKER_USERNAME }}/springboot-app:${{ github.sha }}
+      run: |
+        docker build -t $DOCKER_TAG .
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker push $DOCKER_TAG
+
+    - name: 🚀 Trigger Render Deployment
+      run: |
+        echo "Déclenchement du déploiement..."
+        RESPONSE=$(curl -s -o response.log -w "%{http_code}" -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }})
+        
+        if [ $RESPONSE -eq 200 ]; then
+          echo "✅ Déploiement lancé avec succès !"
+          cat response.log
+        else
+          echo "❌ Erreur: HTTP $RESPONSE"
+          exit 1
+        fi
+
+    # PHASE 4 - VÉRIFICATION (Optionnel mais démo-friendly)
+    - name: 🔎 Check Render Deployment
+      run: |
+        sleep 60 # Attendre le déploiement
+        curl -s https://votre-service.onrender.com/actuator/health | jq '.status' 
+        # Requiert jq d'installé ou utilise grep '"status":"UP"'
