--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,17 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
+      
+    # Étape 3 : Mise en cache Maven
+    - name: 🗄️ Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
-    # Étape 3 : Build + Tests (Gatekeeper)
+    # Étape 4 : Build + Tests (Gatekeeper)
     - name: 🛠️ Build & Run Tests
       run: mvn -B verify
       env:
